Changed the swagger file to I hope acced cors header
